[gd_scene load_steps=3 format=2]

[ext_resource path="res://Attacks/Phase2/BestAttack/MailAttack/mail_attack.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "clear_box"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("RigidBody2D/CollisionPolygon2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="MailAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="WindowSpawn" type="Node2D" parent="."]
position = Vector2( 380, 200 )

[node name="BulletSpawn" type="Node2D" parent="."]
position = Vector2( 362, 216 )

[node name="MailTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="RigidBody2D" type="RigidBody2D" parent="."]
mode = 1

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PoolVector2Array( 346, 344, 400, 342, 532, 344, 532, 248, 540, 202, 542, 350, 340, 350, 340, 172, 346, 290 )

[node name="BulletSpawn2" type="Node2D" parent="."]
position = Vector2( 426, 218 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.25
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/clear_box = SubResource( 1 )

[connection signal="timeout" from="MailTimer" to="." method="_on_MailTimer_timeout"]
[connection signal="area_entered" from="RigidBody2D/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
